--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 'Pacing & Optimization': 'Expertise in campaign strategy, performance analysis, a/b testing, and data-driven optimization to maximize roi.',
                 'Client Relations': 'skilled in account management, strategic consulting, and client communication to build and maintain strong partnerships.',
                 'Team Handling & Operations': 'proven ability in team leadership, cross-functional communication, and workflow management to ensure seamless project execution.',
-                'Platform Expertise': 'in-depth knowledge of reddit advertising, programmatic media buying, and technical troubleshooting for various ad operations.'
+                'Platform Expertise': 'In-depth knowledge of programmatic advertising, DV360, Reddit, Google Ads, Meta Ads, Adroll, Appnexus, and technical troubleshooting for various ad operations.'
             };
 
             const skillTags = document.querySelectorAll('.skill-tag');
