--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="bg-white/80 backdrop-blur-md shadow-md fixed w-full z-10">
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
-                <a href="#home" class="text-2xl font-bold text-gray-800">Pavan Gaddam</a>
+                <a href="#home" class="text-2xl font-bold text-gray-800">Pavan Gaddam Contact +91 9642111724</a>
                 <div class="hidden md:flex space-x-8">
                     <a href="#skills" class="text-gray-600 hover:text-gray-800 transition duration-300">Skills</a>
                     <a href="#experience" class="text-gray-600 hover:text-gray-800 transition duration-300">Experience</a>
